.. Author notes: this file is formatted with restructured text
(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``PHAB_ID=#`` and ``RB_ID=#`` correspond to associated messages in commits.

Unreleased

API Changes:
  
  * util-class-preloader: This library has been removed since it deprecated. We
    no longer recommend that people do this. ``PHAB_ID=D174250``

Bug Fixes:

  * util-app: Fix issue where in some environments, `URLClassLoader#getURLs` can
    return null, failing LoadService from initializing properly
    (see: https://github.com/google/guava/issues/2239). The `URLClassLoader` javadoc
    is not clear if a null can be returned when calling `URLClassLoader#getURLs` and for
    at least one application server, the default returned is null, thus we should be more
    resilient against this possibility. Fixes Finagle #695. ``PHAB_ID=D181152``

Deprecations:

  * util-reflect: This library has been deprecated since it is legacy code and shouldn't
    be used for new services. We no longer think this facility is the right way to do it
    and encourage you to provide your own forwarders. ``PHAB_ID=D174250``

New Features:

  * util-app: added #suppressGracefulShutdownErrors method to optionally suppress exceptions
    during graceful shutdown from bubbling up. ``PHAB_ID=D176970``

18.5.0  2018-05-07

Bug Fixes:

  * util-core: `c.t.concurrent.AsyncSemaphore` no longer completes promises while holding
    its intrinsic lock. ``PHAB_ID=D167434``

  * util-logging: Fix incorrect `loggerName` in `c.t.logging.ScribeHandler` which
    prevented the short-circuiting of publishing messages emitted from the ScribeHandler.
    ``PHAB_ID=D161552``

  * util-hashing: Add murmur3, a fast, non-cryptographic hashing function that
    is missing from hashing.
    ``PHAB_ID=D164915``

18.4.0  2018-04-10

New Features:
