@@ -1,7 +1,7 @@
 package com.twitter.app
 
 import com.twitter.conversions.time._
-import com.twitter.util.{NonFatal => _, _}
+import com.twitter.util._
 import java.lang.reflect.InvocationTargetException
 import java.util.concurrent.ConcurrentLinkedQueue
 import java.util.concurrent.atomic.AtomicReference
