@@ -2,6 +2,7 @@ package com.twitter.util
 
 import java.io.IOException
 import java.net.{InetSocketAddress, Socket}
+import scala.util.control.NonFatal
 
 /**
  * A generator of random local [[java.net.InetSocketAddress]] objects with
